contrib/azure-aks/migrator-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: migrator-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: migrator-service
          servicePort: 80
        path: /
